# simple_portfolio

./: .gitignore  Dockerfile  Dockerfile.dev  Makefile  docker-compose.dev.yml  pyproject.toml
.github/workflows/: test.yml
scripts/: start-dev.sh
src/: test_sample.py
src/simple_portfolio/: asgi.py  settings.py  urls.py  wsgi.py
src/user/: models.py  urls.py  views.py
src/user/migrations/: 0001_initial.py
